# easy_game

./: .gitignore  AGENTS.md  BACKEND.md  CLAUDE.md  DESIGN.md  LICENSE  PLAN.md  README.md  generate_assets.py  pyproject.toml  verify_ui_api.py  vision.md
.github/workflows/: tests.yml
.kodo/: architecture.md  config.json  goal.md
assetgen/: __init__.py  battle_sprites.py  primitives.py
desired_examples/: README.md  actions_desired.py  audio_desired.py  menu_desired.py  scene_stack_desired.py  scrolling_world_desired.py  sprite_animation_desired.py  ui_dialog_desired.py
easygame/: __init__.py  actions.py  animation.py  assets.py  audio.py  cursor.py  game.py  input.py  save.py  scene.py
easygame/backends/: base.py  mock_backend.py  pyglet_backend.py
easygame/rendering/: camera.py  color_swap.py  particles.py  sprite.py
easygame/ui/: __init__.py  component.py  components.py  drag_drop.py  layout.py  screens.py  theme.py  widgets.py
easygame/util/: __init__.py  timer.py  tween.py
examples/battle_vignette/: README.md  battle_demo.py  battle_grid.py  battle_unit.py
examples/menugame/: main.py
examples/tower_defense/: __init__.py  generate_assets.py  main.py
saga2d/: __init__.py  animation.py  assets.py  audio.py  game.py  input.py  save.py  scene.py
saga2d/backends/: __init__.py  mock_backend.py  pyglet_backend.py
saga2d/rendering/: camera.py  particles.py  sprite.py
saga2d/ui/: component.py  components.py  drag_drop.py  hud.py  theme.py  widgets.py
saga2d/util/: __init__.py  timer.py
tests/: __init__.py  conftest.py  test_actions.py  test_adversarial.py  test_adversarial_stage_2.py  test_battle_vignette.py  test_camera.py  test_camera_shake.py  test_drag_drop.py  test_edge_cases.py  test_edge_cases_actions.py  test_edge_cases_audio.py  test_edge_cases_input.py  test_edge_cases_save.py  test_edge_cases_scene.py  test_edge_cases_sprite.py  test_edge_cases_timer_tween.py  test_input.py  test_scene.py  test_scene_draw.py  test_scene_sprites.py  test_scene_timers.py  test_screens.py  test_settings.py  test_sprite.py  test_theme.py  test_tower_defense_example.py  test_tower_defense_tutorial.py  test_ui.py  test_widgets.py  test_world_coords.py
tests/actions/: test_actions.py  test_timer.py  test_tween.py
(+36 files in other folders)
